--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Version 1.2.0
+~~~~~~~~~~~~~
+
+* Changes:
+  - (not actually sure yet; just getting this started for gnits strictness)
+
 Version 1.1.1
 ~~~~~~~~~~~~~
 
